--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,15 @@ dist.jar=${dist.dir}/Library.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=..\\..\\..\\Downloads\\Compressed\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.48-bin.jar=..\\..\\..\\Downloads\\Compressed\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48-bin.jar
 file.reference.mysql-connector-java-5.1.48.jar=../../../Downloads/Compressed/mysql-connector-java-5.1.48/mysql-connector-java-5.1.48/mysql-connector-java-5.1.48.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.48.jar}
+    ${file.reference.mysql-connector-java-5.1.48.jar}:\
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
