--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/Library.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=../../../Downloads/Compressed/1398197092_jdatechooser/jdatechooser/DateChooser.jar
 file.reference.jcalendar-1.4.jar=..\\..\\..\\Downloads\\Compressed\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=..\\..\\..\\Downloads\\Compressed\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48-bin.jar
 file.reference.mysql-connector-java-5.1.48.jar=../../../Downloads/Compressed/mysql-connector-java-5.1.48/mysql-connector-java-5.1.48/mysql-connector-java-5.1.48.jar
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.48.jar}:\
     ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
